--- a/css-foundation/jquery-foundation-main.css
+++ b/css-foundation/jquery-foundation-main.css
@@ -18,23 +18,75 @@ a,
 	font-style: normal;
 }
 
-.history-page #content h2 {
-	color: #0098bf;
+#content h2 {
+	color: #b71551;
 	font-weight: normal;
 	font-style: normal;
-	font-size: 40px;
 	margin-bottom: 20px;
+}
+
+.history-page #content h2 {
+	color: #0098bf;
+	font-size: 40px;
 	line-height: 40px;
 }
+
 
 .history-page #content h3 {
 	color: #b71551;
 	font-weight: normal;
 	font-style: normal;
-	font-size: 24px;
-	line-height: 24px;
 	border-top: 1px solid #d7d7d7;
 	padding-top: 20px;
+	font-size: 24px;
+	line-height: 24px;
+}
+
+.team-page.content-full #content {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.team-page #content ul.block-grid img {
+	display: block;
+	width: 100%;
+	max-width: 100%;
+	margin-bottom: 10px;
+}
+
+.team-page #content h2 {
+	color: #333;
+	font-size: 20px;
+	line-height: 20px;
+	font-weight: bold;
+	text-align: center;
+	margin-bottom:5px;
+}
+
+.team-page #content h3 {
+	color: #008b9f;
+	font-style: italic;
+	font-size: 14px;
+	line-height: 18px;
+	text-align: center;
+	min-height: 45px;
+	border-bottom: 1px solid #dbdbdb;
+}
+
+.team-page #content ul.team-list h2,
+.team-page #content ul.team-list h3 {
+	text-align: left;
+}
+
+.team-page #content ul.team-list h3 {
+	border: none;
+	min-height: 5px;
+}
+
+.team-page #content p.center-txt {
+	padding-left: 10%;
+	padding-right: 10%;
+	color: #b71551;
 }
 
 a.button,
