--- a/css/grid.css
+++ b/css/grid.css
@@ -3,13 +3,14 @@ Based on Zurb Foundation's Grid
 */
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-.row { width: 1200px; max-width: 100%; min-width: 768px; margin: 0 auto; }
-.row .row { width: auto; max-width: none; min-width: 0; margin: 0 -15px; }
+/* The Grid ---------------------- */
+.row { width: 1240px; max-width: 100%; min-width: 768px; margin: 0 auto; }
+.row .row { width: auto; max-width: none; min-width: 0; margin: 0 -25px; }
 .row.collapse .column, .row.collapse .columns { padding: 0; }
-.row .row { width: auto; max-width: none; min-width: 0; margin: 0 -15px; }
+.row .row { width: auto; max-width: none; min-width: 0; margin: 0 -25px; }
 .row .row.collapse { margin: 0; }
 
-.column, .columns { float: left; min-height: 1px; padding: 0 15px; position: relative; }
+.column, .columns { float: left; min-height: 1px; padding: 0 25px; position: relative; }
 .column.centered, .columns.centered { float: none; margin: 0 auto; }
 
 [class*="column"] + [class*="column"]:last-child { float: right; }
@@ -121,19 +122,19 @@ img { -ms-interpolation-mode: bicubic; }
   .push-two, .push-three, .push-four, .push-five, .push-six, .push-seven, .push-eight, .push-nine, .push-ten { left: auto; }
   .pull-two, .pull-three, .pull-four, .pull-five, .pull-six, .pull-seven, .pull-eight, .pull-nine, .pull-ten { right: auto; }
   /* Mobile 4-column Grid */
-  .row .mobile-one { width: 25% !important; float: left; padding: 0 15px; }
+  .row .mobile-one { width: 25% !important; float: left; padding: 0 25px; }
   .row .mobile-one:last-child { float: right; }
   .row .mobile-one.end { float: left; }
   .row.collapse .mobile-one { padding: 0; }
-  .row .mobile-two { width: 50% !important; float: left; padding: 0 15px; }
+  .row .mobile-two { width: 50% !important; float: left; padding: 0 25px; }
   .row .mobile-two:last-child { float: right; }
   .row .mobile-two.end { float: left; }
   .row.collapse .mobile-two { padding: 0; }
-  .row .mobile-three { width: 75% !important; float: left; padding: 0 15px; }
+  .row .mobile-three { width: 75% !important; float: left; padding: 0 25px; }
   .row .mobile-three:last-child { float: right; }
   .row .mobile-three.end { float: left; }
   .row.collapse .mobile-three { padding: 0; }
-  .row .mobile-four { width: 100% !important; float: left; padding: 0 15px; }
+  .row .mobile-four { width: 100% !important; float: left; padding: 0 25px; }
   .row .mobile-four:last-child { float: right; }
   .row .mobile-four.end { float: left; }
   .row.collapse .mobile-four { padding: 0; }
@@ -154,30 +155,31 @@ the same height. You can optionally uncomment the
 lines below to support arbitrary height, but know
 that IE7/8 do not support :nth-child.
 -------------------------------------------------- */
-.block-grid { display: block; overflow: hidden; padding: 0; }
-.block-grid > li { display: block; height: auto; float: left; }
-.block-grid.one-up { margin: 0; }
-.block-grid.one-up > li { width: 100%; padding: 0 0 15px; }
-.block-grid.two-up { margin: 0 -15px; }
-.block-grid.two-up > li { width: 50%; padding: 0 15px 15px; }
-.block-grid.two-up > li:nth-child(2n+1) { clear: both; }
-.block-grid.three-up { margin: 0 -12px; }
-.block-grid.three-up > li { width: 33.33%; padding: 0 12px 12px; }
-.block-grid.three-up > li:nth-child(3n+1) { clear: both; }
-.block-grid.four-up { margin: 0 -10px; }
-.block-grid.four-up > li { width: 25%; padding: 0 10px 10px; }
-.block-grid.four-up > li:nth-child(4n+1) { clear: both; }
-.block-grid.five-up { margin: 0 -8px; }
-.block-grid.five-up > li { width: 20%; padding: 0 8px 8px; }
-.block-grid.five-up > li:nth-child(5n+1) { clear: both; }
+.block-grid, #content .block-grid { display: block; overflow: hidden; padding: 0; }
+.block-grid > li, #content .block-grid > li { display: block; height: auto; float: left; }
+.block-grid.one-up, #content .block-grid.one-up { margin: 0; }
+.block-grid.one-up > li, #content .block-grid.one-up > li { width: 100%; padding: 0 0 15px; }
+.block-grid.two-up, #content .block-grid.two-up { margin: 0 -15px; }
+.block-grid.two-up > li, #content .block-grid.two-up > li { width: 50%; padding: 0 15px 15px; }
+.block-grid.two-up > li:nth-child(2n+1), #content .block-grid.two-up > li:nth-child(2n+1) { clear: both; }
+.block-grid.three-up, #content .block-grid.three-up { margin: 0 -12px; }
+.block-grid.three-up > li, #content .block-grid.three-up > li { width: 33.33%; padding: 0 12px 12px; }
+.block-grid.three-up > li:nth-child(3n+1), #content .block-grid.three-up > li:nth-child(3n+1) { clear: both; }
+.block-grid.four-up, #content .block-grid.four-up { margin: 0 -10px; }
+.block-grid.four-up > li, #content .block-grid.four-up > li { width: 25%; padding: 0 10px 10px; }
+.block-grid.four-up > li:nth-child(4n+1), #content .block-grid.four-up > li:nth-child(4n+1) { clear: both; }
+.block-grid.five-up, #content .block-grid.five-up { margin: 0 -8px; }
+.block-grid.five-up > li, #content .block-grid.five-up > li { width: 20%; padding: 0 8px 8px; }
+.block-grid.five-up > li:nth-child(5n+1), #content .block-grid.five-up > li:nth-child(5n+1) { clear: both; }
 
 /* Mobile Block Grids */
-@media only screen and (max-width: 767px) { .block-grid.mobile > li { float: none; width: 100%; margin-left: 0; }
+@media only screen and (max-width: 767px) { 
+  .block-grid.mobile > li { float: none !important; width: 100% !important; margin-left: 0 !important; }
   .block-grid > li { clear: none !important; }
-  .block-grid.mobile-two-up > li { width: 50%; }
+  .block-grid.mobile-two-up > li { width: 50% !important; }
   .block-grid.mobile-two-up > li:nth-child(2n+1) { clear: both; }
-  .block-grid.mobile-three-up > li { width: 33.33%; }
+  .block-grid.mobile-three-up > li { width: 33.33% !important; }
   .block-grid.mobile-three-up > li:nth-child(3n+1) { clear: both !important; }
-  .block-grid.mobile-four-up > li { width: 25%; }
+  .block-grid.mobile-four-up > li { width: 25% !important; }
   .block-grid.mobile-four-up > li:nth-child(4n+1) { clear: both; }
   .block-grid.mobile-five-up > li:nth-child(5n+1) { clear: both; } }
