--- a/css/grid.css
+++ b/css/grid.css
@@ -111,7 +111,7 @@ img { -ms-interpolation-mode: bicubic; }
 .row:after { clear: both; }
 
 /* Mobile Grid and Overrides ---------------------- */
-@media only screen and (max-width: 767px) { body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%; min-width: 0; margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0; }
+@media only screen and (max-width: 767px) {
   .row { width: auto; min-width: 0; margin-left: 0; margin-right: 0; }
   .column, .columns { width: auto !important; float: none; }
   .column:last-child, .columns:last-child { float: none; }
@@ -144,6 +144,8 @@ img { -ms-interpolation-mode: bicubic; }
   .pull-two-mobile { right: 50%; }
   .push-three-mobile { left: 75%; }
   .pull-three-mobile { right: 75%; } }
+  
+  
 /* Block Grids ---------------------- */
 /* These are 2-up, 3-up, 4-up and 5-up ULs, suited
 for repeating blocks of content. Add 'mobile' to
