--- a/css/grid.css
+++ b/css/grid.css
@@ -1,3 +1,6 @@
+/* @override 
+	http://jon-mbp.local/~jon/jquery/css/grid.css */
+
 /* The Grid ---------------------- 
 Based on Zurb Foundation's Grid
 */
@@ -112,8 +115,9 @@ img { -ms-interpolation-mode: bicubic; }
 
 /* Mobile Grid and Overrides ---------------------- */
 @media only screen and (max-width: 767px) {
-  .row { width: auto; min-width: 0; margin-left: 0; margin-right: 0; }
-  .column, .columns { width: auto !important; float: none; }
+  .row { width: auto; min-width: 0; margin-left: 0 !important; margin-right: 0 !important; }
+  .column, .columns { width: auto !important; float: none; padding-left: 0 !important; padding-right: 0 !important;
+  }
   .column:last-child, .columns:last-child { float: none; }
   [class*="column"] + [class*="column"]:last-child { float: none; }
   .column:before, .columns:before, .column:after, .columns:after { content: ""; display: table; }
