--- a/css-foundation/jquery-foundation-main.css
+++ b/css-foundation/jquery-foundation-main.css
@@ -58,10 +58,10 @@ a,
 }
 
 .member-level {
-	width: 30%;
+	width: 32%;
 	float: left;
 	display: inline;
-	margin-right: 5%;
+	margin-right: 2%;
 	background: url(../images/dark-grey-tile.png);
 	position: relative;
 	overflow: hidden;
@@ -117,6 +117,7 @@ a.icon-search {
 	display: inline;
 	margin-left: 15px;
 	margin-bottom: 10px;
+	z-index: 2;
 }
 
 a::before {
@@ -176,6 +177,7 @@ a.icon-search::before {
 	padding-left: 15px;
 	padding-right: 15px;
 	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 .choose-gifts h4 {
@@ -188,6 +190,18 @@ a.icon-search::before {
 .choose-gifts label {
 	color: #ffffff;
 	margin-right: 20px;
+}
+
+.choose-gifts hr {
+	height: 1px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.choose-gifts select {
+	display: block;
+	width: 100%;
+	margin-bottom: 15px;
 }
 
 
@@ -302,7 +316,7 @@ a.icon-search::before {
 }
 
 a.button,
-#content a.button {
+#content a.button, .button {
 	background-color: #b71551;
 }
 
