--- a/css/base.css
+++ b/css/base.css
@@ -1180,6 +1180,7 @@ pre strong, pre b {
 	font: normal normal 20px/20px Proxima-Nova, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	color: #666;
 	margin-bottom: 10px;
+	margin-top: 12px;
 }
 
 #content h1.block,
