--- a/css/docs.css
+++ b/css/docs.css
@@ -1,6 +1,12 @@
 /* @override 
 	http://jon-mbp.local/~jon/jquery/css/docs.css */
 
+
+
+a {
+	color: #0e5792;
+}
+
 header {
 	background: url(../images/bg-body-jquery.jpg) no-repeat center top #065691;
 	margin: 0 auto;
@@ -17,6 +23,26 @@ header h3 {
 	font: 25px/25px Proxima-Nova, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	margin-top: 20px;
 	margin-bottom: 0;
-	
-	
+}
+
+#container {
+	padding-left: 30px;
+	padding-right: 30px;
+	background: none #fff;
+}
+
+#content-wrapper {
+	border: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+#sidebar {
+	margin-right: -30px;
+}
+
+pre {
+	margin-left: 0px;
+	margin-right: 0px;
 }
