--- a/css/base.css
+++ b/css/base.css
@@ -455,7 +455,7 @@ body {
 	width: 68%;
 }
 
-.content-left #content {
+.content-right #content {
 	float: right;
 }
 
@@ -497,15 +497,17 @@ body {
 
 
 .sidebar-left #sidebar,
-.content-left #sidebar {
+.content-right #sidebar {
 		float: left;
-		border-left: 1px solid #cccccc;
+		border-left: 0;
+		border-right: 1px solid #cccccc;
+		margin-left: -40px;
 		-moz-border-image: -moz-linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
 		-webkit-border-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(15%, #e7e7e7), color-stop(85%, #e7e7e7), color-stop(100%, #ffffff));
 		-webkit-border-image: -webkit-linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
 		-o-border-image: -o-linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
 		border-image: linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
-		padding: 0.5em 20px 0.5em 35px; /*0.5 * 16px = 8px*/
+		 /*0.5 * 16px = 8px*/
 		-webkit-box-shadow: inset 15px 0 5px -16px #e7e7e7;
 		box-shadow: inset 15px 0 5px -16px #e7e7e7;
 		background-image: -webkit-gradient(radial, 0% 50%, 0, 0% 50%, 80, color-stop(0%, #f2f2f2), color-stop(80%, #ffffff));
@@ -516,7 +518,9 @@ body {
 		background-image: radial-gradient(right, #f2f2f2, #ffffff 80%);
 		margin-bottom: 30px;
 		margin-bottom: 30px;
-}
+		padding-right: 20px;
+		padding-left: 35px;
+	}
 
 /* Global Nav
    ========================================================================== */
