--- a/css/docs.css
+++ b/css/docs.css
@@ -46,3 +46,58 @@ pre {
 	margin-left: 0px;
 	margin-right: 0px;
 }
+
+#content .example {
+	border: 1px solid #dadada;
+	-webkit-border-radius: 3px;
+	   -moz-border-radius: 3px;
+	        border-radius: 3px;
+			padding: 0 20px;
+			margin-bottom: 30px;
+}
+
+#content .example pre {
+	clear: both;
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-bottom: 0;
+	-webkit-border-bottom-right-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-moz-border-radius-bottomright: 3px;
+	-moz-border-radius-bottomleft: 3px;
+	border-bottom-right-radius: 3px;
+	border-bottom-left-radius: 3px;
+}
+
+#content .example h3 {
+	background-color: #f1f1f1;
+	margin-left: -20px;
+	margin-right: -20px;
+	padding: 20px;
+	margin-top: 0;
+	margin-bottom: 30px;
+	-webkit-border-top-left-radius: 3px;
+	-webkit-border-top-right-radius: 3px;
+	-moz-border-radius-topleft: 3px;
+	-moz-border-radius-topright: 3px;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+
+@media only screen and (max-width: 700px) {
+	#content-wrapper {
+		padding-top: 0px;
+	}
+}
+
+
+@media only screen and (max-width: 480px) {
+	#container {
+		padding: 0;
+	}
+	
+	#content-wrapper {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
