--- a/css/docs.css
+++ b/css/docs.css
@@ -84,6 +84,27 @@ pre {
 	border-top-right-radius: 3px;
 }
 
+#content .example h3.ignore-example {
+	background-color: #fff;
+	margin-left: 0px;
+	margin-right: 0px;
+	padding: 0px;
+	margin-top: 0;
+	margin-bottom: 10px;
+	-webkit-border-top-left-radius: 0px;
+	-webkit-border-top-right-radius: 0px;
+	-moz-border-radius-topleft: 0px;
+	-moz-border-radius-topright: 0px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+}
+
+#banner-secondary {
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-top: -30px;
+}
+
 @media only screen and (max-width: 700px) {
 	#content-wrapper {
 		padding-top: 0px;
